--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+@plugin "@tailwindcss/typography";
+
 @custom-variant dark (&:is(.dark *));
 
 @theme {
@@ -122,4 +124,15 @@
   body {
     @apply bg-background text-foreground;
 	}
+}
+
+
+.tiptap.ProseMirror {
+    outline: none;
+}
+
+.is-active {
+    background-color: #dadada;
+    border-radius: 4px;
+    padding: 0px 2px;
 }
