--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -126,6 +126,45 @@
 	}
 }
 
+@theme {
+    --animate-fade-left: fade-left 0.2s ease both;
+    --animate-fade-right: fade-right 0.2s ease both;
+
+    @keyframes fade-right {
+        0% {
+            opacity: 0;
+            transform: translateX(2rem);
+        }
+
+        100% {
+            opacity: 1;
+            transform: translateX(0);
+        }
+    }
+
+    @keyframes fade-left {
+        0% {
+            opacity: 0;
+            transform: translateX(-2rem);
+        }
+
+        100% {
+            opacity: 1;
+            transform: translateX(0);
+        }
+    }
+}
+
+@layer utilities {
+    .animate-fade-left {
+        animation: var(--animate-fade-left);
+    }
+
+    .animate-fade-right {
+        animation: var(--animate-fade-right);
+    }
+}
+
 
 .tiptap.ProseMirror {
     outline: none;
